This file documents the revision history for Phonebook.

0.09
        - Don't redirect to the search page from display_form.cgi if
          no query is specified

0.08  Thu Feb  9 16:13:29 EST 2006
        - Add redirect for old search.ufl.edu form

0.07  Wed Feb  8 16:15:50 EST 2006
        - Add redirects for old Phonebook URLs

0.06  Tue Feb  7 20:55:31 EST 2006
        - Implement search sources (local for now)
        - Move TT wrapper into the configuration
        - Add placeholder vCard view to override wrapper (will be
          replaced by a real vCard view)
        - Slightly better error handling
        - Use /usr/bin/env in script shebang lines for production
          environment

0.05  Mon Jan  9 13:49:44 EST 2006
        - Minor cleanup
        - Improve handling of objects passed to uri_for

0.04  Thu Dec 29 14:04:52 EST 2005
        - Default stylesheets to use sec.css
        - Link from unit page to search for people in unit
        - Display a person's permanent address

0.03  Wed Dec 28 13:36:22 EST 2005
        - Upgrade to Catalyst 5.60
        - Move Uf::Webadmin::Phonebook to Phonebook
        - Remove Phonebook::Constants, as it wasn't helping with
          readability
        - Rename Phonebook::Utilities to Phonebook::Util for
          consistency with other Perl packages

0.02  Mon Nov 21 18:24:31 EST 2005
        - Improve address parsing and output
        - Add vCard output
        - Move away from short package names (C -> Controller, etc.)

0.01  Mon Aug  8 18:01:18 EDT 2005
        - Initial revision, generated by Catalyst